feat: refactor predicted classification
