# api/openapi_server/models/feature_all_of.py
@@ -46,7 +46,7 @@ class FeatureAllOf(Model):
     def weight(self):
         """Gets the weight of this FeatureAllOf.
 
-        The contribution of that feature to the classification  # noqa: E501
+        The contribution of that feature to the classification, if positive weight, this feature contributes to a document's sensitivity and conversely  # noqa: E501
 
         :return: The weight of this FeatureAllOf.
         :rtype: float
@@ -57,7 +57,7 @@ class FeatureAllOf(Model):
     def weight(self, weight):
         """Sets the weight of this FeatureAllOf.
 
-        The contribution of that feature to the classification  # noqa: E501
+        The contribution of that feature to the classification, if positive weight, this feature contributes to a document's sensitivity and conversely  # noqa: E501
 
         :param weight: The weight of this FeatureAllOf.
         :type weight: float
